# thread-tools

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.cmake/: get_cpm.cmake  tools.cmake
project-bin/: CMakeLists.txt
project-lib/: CMakeLists.txt
project-lib/tests/: CMakeLists.txt
project-lib/tests/src/: hello_world.cc
thread-tools/: CMakeLists.txt
thread-tools-test/: CMakeLists.txt
thread-tools-test/src/: wait_lock.cc
thread-tools-tests/src/: transfer_queue.cc
thread-tools/archive/include/: gate.hh  wait_variable.hh
thread-tools/archive/src/: gate.cc
thread-tools/archive/tests/: gate.cc  wait_variable.cc
thread-tools/include/thread-tools/: task_queue.hh  transfer_queue.hh  wait_lock.hh
thread-tools/tests/: CMakeLists.txt
thread-tools/tests/src/: task_queue.cc
